--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Burnify</string>
+    <string name="weight_hint">Enter your weight (kg)</string>
+    <string name="height_hint">Enter your height (cm)</string>
+    <string name="age_hint">Enter your age</string>
+    <string name="save_button">Save</string>
 </resources>
